🐛 Fix some bugs with traits
- Fix non-abbreviated alignment traits getting capitalized, e.g. "CHAOTIC"
- Use HTML escapes for "<" and ">" in trait names so that markdown formatters
  which allow HTML (like Obsidian) don't treat the characters in traits as
  HTML tags. e.g. "versatile <s>" was previously causing strikethrough text.